# rootengine-tools

./: .gitignore  CMakeLists.txt
asset_io/: asset_io.c
asset_io/include/: asset_io.h
data_struct/: data_struct.c
data_struct/include/: data_struct.h
data_types/: data_types.c  data_types.h
data_types/include/: data_types.h
roots_math/: roots_math.c
roots_math/include/: roots_math.h
